--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,1 +1,2 @@
-user_uuid = "a617374b-0c5b-4f53-a127-755f9979f084"
+user_uuid="a617374b-0c5b-4f53-a127-755f9979f084"
+bucket_name="your-aws-bucket-name"
