#25 refactor s3 bucket into the new terrahouse_aws module

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,2 +1,2 @@
 user_uuid="a617374b-0c5b-4f53-a127-755f9979f084"
-bucket_name="your-aws-bucket-name"
+bucket_name="1g4f8aongqaalg2qhaewzrwi31h00733"
