--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,2 +1,4 @@
 user_uuid="a617374b-0c5b-4f53-a127-755f9979f084"
 bucket_name="1g4f8aongqaalg2qhaewzrwi31h00733"
+index_html_filepath="/workspace/terraform-beginner-bootcamp-2023/public/index.html"
+error_html_filepath="/workspace/terraform-beginner-bootcamp-2023/public/error.html"
