--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -12,7 +12,7 @@ tasks:
     before: |
       source ./bin/set_tf_alias 
       source ./bin/install_aws_cli
-      
+
   - name: http-server
     before: |
       npm install --global http-server
@@ -22,3 +22,4 @@ vscode:
   extensions:
     - amazonwebservices.aws-toolkit-vscode
     - hashicorp.terraform
+    - phil294.git-log--graph
