--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,11 +1,14 @@
 terratowns_endpoint="https://terratowns.cloud/api"
 arcanum = {
     public_path = "/workspace/terraform-beginner-bootcamp-2023/public/arcanum"
-    content_version = 2
+    content_version = 1
 }
 payday= {
     public_path = "/workspace/terraform-beginner-bootcamp-2023/public/payday"
     content_version = 1
 }
 
-
+pumpkin= {
+    public_path = "/workspace/terraform-beginner-bootcamp-2023/public/pumpkin-pie"
+    content_version = 1
+}
